--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -136,16 +136,16 @@
                 </ul>
             </li>
 
-            <li class="active" ng-if="nav.industries">
+            <li class="active" ng-if="nav.clusters">
                 <p style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
     padding-right: 7px;"></span><span class="nav-label">
 
-                    Industries
+                    Clusters
 
                 </span></p>
                 <ul class="nav nav-second-level">
-                    <li ng-repeat="item in nav.industries">
-                        <a ui-sref="{{'industry.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}">
+                    <li ng-repeat="item in nav.clusters">
+                        <a ui-sref="{{'cluster.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}">
                             <span ng-if="item.community_profiles[nav.location_path]">
                                 <i ng-class="'fa ' + item.community_profiles[nav.location_path].icon"></i> {{item.community_profiles[nav.location_path].name}}</span>
                             <span ng-if="!item.community_profiles[nav.location_path]">
