--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -5,10 +5,10 @@
                 <div class="panel-body">
                     <div id="hbreadcrumb" class="pull-right m-t-lg">
                         <ol class="hbreadcrumb">
-                            <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{nav.location.type + '.dashboard({community: nav.location})'}}">
+                            <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{'community.dashboard({community: nav.location})'}}">
                                 <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                             </li>
-                            <li ui-sref="{{nav.community.type + '.dashboard({community_path: nav.community.key, community: nav.community})'}}"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
+                            <li ui-sref="{{'community.dashboard({community_path: nav.community.key, community: nav.community})'}}"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
                                 <span ng-if="!nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.profile.name }}</span>
                                 &nbsp;&nbsp;/
                             </li>
@@ -28,12 +28,12 @@
         </div>
         <div class="col-md-6">
             <div class="hpanel">
-                <div class="panel-body" style="padding: 10px 5px;">
+                <div class="panel-body" style="padding: 10px 5px; min-height: 78px;">
                     <div class="col-xs-8">
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
-                            <div ng-repeat="head in dashboard.top.leaders | limitTo: 5" style="float:left;">
-                                <a class="text-info" ui-sref="user.dashboard({profile: head.value, location_path: head.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{head.value.profile.name}}<span ng-if="!$last">,</span></small></a>
+                            <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="float:left;">
+                                <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{lead.value.profile.name}}<span ng-if="!$last">,</span></small></a>
                             </div>
                         </div>
                     </div>
@@ -52,14 +52,14 @@
 <div>
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-6">
             <div class="hpanel hblue" >
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-8">
                         <div class="stats-title pull-left">
                             <a ui-sref="{{'user.list' + nav.nav_url}}">
                                 <h3>People</h3>
-                                <h1 class="text-info">{{dashboard.top.people.total}}</h1>
+                                <h1 class="text-info">{{dashboard.top.people.count}}</h1>
                             </a>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="panel-footer" style="background: #fff;">
-                    <div ng-repeat="item in dashboard.top.people.results | limitTo: 5">
+                    <div ng-repeat="item in dashboard.top.people.entries | limitTo: 5">
                         <div style="margin-right: -2px; margin-bottom:-5px;">
                             <div ng-if="$first" style="padding-top:5px;"></div>
                             <div class="row" ng-include="'components/users/user.list.item.html'"></div>
@@ -80,14 +80,14 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-6">
             <div class="hpanel" style="border-top: 2px solid #34495E;">
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-8">
                         <div class="stats-title">
                             <a ui-sref="{{'company.list' + nav.nav_url}}">
                                 <h3>Companies</h3>
-                                <h1 style="color:#34495E;">{{dashboard.top.companies.total}}</h1>
+                                <h1 style="color:#34495E;">{{dashboard.top.companies.count}}</h1>
                             </a>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="panel-footer" style="background: #fff;">
-                    <div ng-repeat="item in dashboard.top.companies.results | limitTo: 5">
+                    <div ng-repeat="item in dashboard.top.companies.entries | limitTo: 5">
                         <div style="margin-right: -2px; margin-bottom:-5px;">
                             <div ng-if="$first" style="padding-top:5px;"></div>
                             <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
@@ -108,87 +108,50 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="hpanel hgreen">
-                <div class="panel-body" style="padding: 10px 5px;">
-                    <div class="col-xs-8">
-                        <div class="stats-title">
-                            <h3>Top Skills</h3>
-                            <h1 class="text-success">{{dashboard.top.skills.total}}</h1>
+        <div class="col-xs-12 col-sm-6">
+            <div class="hpanel forum-box">
+
+                <div class="panel-heading" style="border-bottom: 2px solid #3498db">
+                    <h3>Top Skills</h3>
+                </div>
+
+                <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries | limitTo: 5">
+                    <div class="row">
+                        <div class="col-xs-10 forum-heading">
+                            <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
+                            <progressbar ng-attr-value="item.count/dashboard.top.skills.count" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
                         </div>
-                    </div>
-                    <div class="col-xs-4">
-                        <div class="stats-icon pull-right">
-                            <i class="pe-7s-medal fa-4x"></i>
+                        <div class="col-xs-2 forum-info">
+                            <span class="number">{{item.count}}</span>
+                            <small>{{item.count == 1 ? 'Person' : 'People'}}</small>
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer" style="background: #fff; padding-bottom: 8px;">
-                    <div ng-repeat="item in dashboard.top.skills.top | limitTo: 10">
-                        <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                        <progressbar ng-attr-value="item.count/dashboard.top.skills.total" type="success" class="progress-small full"></progressbar>
-                    </div>
-                </div>
+
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-6">
             <div class="hpanel forum-box">
 
                 <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
                     <h3>Top Industries</h3>
                 </div>
 
-                <div class="panel-body" ng-repeat="item in dashboard.top.companies.top | limitTo: 5">
+                <div class="panel-body" ng-repeat="item in dashboard.top.industries.entries | limitTo: 5">
                     <div class="row">
                         <div class="col-xs-10 forum-heading">
                             <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                            <progressbar ng-attr-value="item.count/dashboard.top.companies.total" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                            <progressbar ng-attr-value="item.count/dashboard.top.industries.count" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
                         </div>
                         <div class="col-xs-2 forum-info">
-                                <span class="number">{{item.count}}</span>
-                                <small>{{item.count == 1 ? 'Company' : 'Companies'}}</small>
+                            <span class="number">{{item.count}}</span>
+                            <small>{{item.count == 1 ? 'Company' : 'Companies'}}</small>
                         </div>
                     </div>
                 </div>
 
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="hpanel forum-box">
-
-                <div class="panel-heading" style="border-bottom: 2px solid #3498DB;">
-                    <h3>Top Networks</h3>
-                </div>
-
-                <div class="panel-body" ng-repeat="network in dashboard.top.people.top | limitTo: 5" ng-if="dashboard.communities[network.value]">
-                    <div class="row">
-                        <div class="col-xs-10 forum-heading">
-
-                            <a ui-sref="network.dashboard({community_path: dashboard.communities[network.value].key, community: dashboard.communities[network.value], query: '*'})">
-                            <span ng-if="dashboard.communities[network.value].community_profiles[dashboard.location_path]">
-                                <h4><i ng-class="'fa ' + dashboard.communities[network.value].community_profiles[dashboard.location_path].icon"></i> {{dashboard.communities[network.value].community_profiles[dashboard.location_path].name}}</h4>
-                            <div class="desc" style="margin-bottom:5px;">{{dashboard.communities[network.value].community_profiles[dashboard.location_path].headline}}</div>
-                            </span>
-                            <span ng-if="!dashboard.communities[network.value].community_profiles[dashboard.location_path]">
-                                <h4><i ng-class="'fa ' + dashboard.communities[network.value].profile.icon"></i> {{dashboard.communities[network.value].profile.name}}</h4>
-                            <div class="desc" style="margin-top: 4px;">{{dashboard.communities[network.value].profile.headline}}</div>
-                            </span>
-                            </a>
-                        </div>
-                        <div class="col-xs-2 forum-info">
-                            <a ui-sref="user.list({community_path: dashboard.communities[network.value].key, community: dashboard.communities[network.value]})">
-                                <span class="number">{{network.count}}</span>
-                                <small>{{network.count == 1 ? 'Person' : 'People'}}</small>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
-
 </div>
