--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -3,10 +3,13 @@
         <div class="panel-body" ng-class="{'header-embedded' : nav.embedded, 'no-sides' : !nav.embedded}">
             <div id="hbreadcrumb" class="pull-left">
                 <ol class="hbreadcrumb">
-                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{nav.location.type + '.dashboard({location_path: nav.location.key, community: nav.location})'}}">
+                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="community.dashboard({location_path: nav.location.key, community: nav.location})">
                         <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
-                    <li><a ui-sref="{{nav.community.type + '.dashboard({community_path: nav.community.key, community: nav.community})'}}"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
+                    <li ng-if="nav.community.type == 'user' || nav.community.type == 'company'">
+                        &nbsp;&nbsp;{{ nav.community.profile.name }}&nbsp;&nbsp;/
+                    </li>
+                    <li ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'"><a ui-sref="community.dashboard({community_path: nav.community.key, community: nav.community})"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
                         <span ng-if="!nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.profile.name }}</span>
                         &nbsp;&nbsp;/</a>
                     </li>
