--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -108,6 +108,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-xs-12 col-sm-6">
             <div class="hpanel forum-box">
 
