--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,23 +1,23 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: companies.community })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
                 ng-src="{{item.value.profile.avatar || 'images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.png'"/></a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: companies.community })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
-        <a ng-show="{{(item.value.profile.angellist.product_desc).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
+        <a ng-show="{{(item.value.profile.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
         <li ng-repeat="val in item.value.communities" class="role-right">
-            <a href="{{'/' + val}}" ng-class="{'btn-danger' : companies.communities[val].type == 'company', 'btn-info' : companies.communities[val].type == 'network', 'btn-primary' : companies.communities[val].type == 'cluster', 'btn-success' : companies.communities[val].type == 'location'}" class="btn btn-xs btn-outline hidden"><i class="fa {{companies.communities[val].profile.icon}}"></i> {{companies.communities[val].profile.name}}</a>
+            <a href="{{'/' + val}}" ng-class="{'btn-danger' : nav.communities[val].type == 'company', 'btn-info' : nav.communities[val].type == 'network', 'btn-primary' : nav.communities[val].type == 'cluster', 'btn-success' : nav.communities[val].type == 'location'}" class="btn btn-xs btn-outline hidden"><i class="fa {{nav.communities[val].profile.icon}}"></i> {{nav.communities[val].profile.name}}</a>
         </li>
         <br>
         <div class="dash-row">
-            <span class="text-muted" ng-bind-html="::item.value.profile.angellist.high_concept | highlight:companies.lastQuery"></span>
+            <span class="text-muted" ng-bind-html="::item.value.profile.headline | highlight:companies.lastQuery"></span>
         </div>
-        <div ng-show="(showSummary || $state.includes('search.*')) && item.value.profile.angellist.product_desc">
+        <div ng-show="(showSummary || $state.includes('search.*')) && item.value.profile.summary">
             <div style="padding-bottom: 10px;">
                 <hr>
-                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.angellist.product_desc | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
+                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
             </div>
         </div>
     </div>
