--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,6 @@
 /* Custom */
 
+.fa-rotate-45 {-webkit-transform:rotate(45deg); -moz-transform:rotate(45deg); -ms-transform:rotate(45deg); -o-transform:rotate(45deg); transform:rotate(45deg);}
 
 //for xeditable
 
