--- a/app/components/common/nav/nav.add_cluster.html
+++ b/app/components/common/nav/nav.add_cluster.html
@@ -18,11 +18,15 @@
                 <br><br>
                 <div class="panel-heading" style="font-size: 20px;">2. Give the cluster a name</div>
                 <input type="text" class="form-control input-lg" placeholder="Tech, Bio-Science, Craft Brew, etc.." ng-model="add.name" required>
+                <em>Your url will be: https://startupcommunity.org/{{add.location_key}}/<strong><span class="text-lowercase">{{ urlencoded(add.name) }}</span></strong></em>
                 <div class="m-t-xs" ng-show="!add.name && add.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A name is required.</span>
                 </div>
                 <br>
-                <div class="panel-heading" style="font-size: 20px;">3. Select the industries that make up this cluster</div>
+                <div class="panel-heading" style="font-size: 20px;">3. And a description (keep it short if possible)</div>
+                <input type="text" class="form-control input-lg" placeholder="Hardware and software product companies in our region" ng-model="add.headline">
+                <br>
+                <div class="panel-heading" style="font-size: 20px;">4. Select the industries that make up this cluster</div>
                 <div class="panel-body industry_select" style="padding:5px; margin-bottom:5px;">
                     <ui-select multiple ng-model="add.industries" style="border:none;" required>
                         <ui-select-match placeholder="Search by industry..">{{$item}}</ui-select-match>
@@ -35,10 +39,7 @@
                 <div class="m-t-xs" ng-show="!add.industries && add.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> At least one industry is required.</span>
                 </div>
-                <br><br>
-                <div class="panel-heading" style="font-size: 20px;">Choose a url path name (no spaces):</div>
-                <input type="text" class="form-control input-lg text-lowercase" placeholder="{{add.name}}" ng-model="add.url" pattern="^[a-zA-Z0-9]+$" style="margin-bottom: 5px;">
-                <em>Your url will be: https://startupcommunity.org/{{add.location_key}}/<strong><span class="text-lowercase">{{add.url || add.name}}</span></strong></em>
+                <br>
                 <br>
             </div>
         </form>
