--- a/app/components/common/nav/nav.add_cluster.html
+++ b/app/components/common/nav/nav.add_cluster.html
@@ -17,20 +17,20 @@
                 </div>
                 <br><br>
                 <div class="panel-heading" style="font-size: 20px;">2. Give the cluster a name</div>
-                <input type="text" class="form-control input-lg" placeholder="Tech, Bio-Science, Craft Brew, etc.." ng-model="add.name" required>
-                <em>Your url will be: https://startupcommunity.org/{{add.location_key}}/<strong><span class="text-lowercase">{{ urlencoded(add.name) }}</span></strong></em>
+                <input type="text" class="form-control input-lg" placeholder="Tech, Bio-Science, Craft Brew, etc.." ng-model="add.name" style="margin-bottom: 5px;" required>
+                <em>Your url will be: https://startupcommunity.org/{{add.location_key}}/<strong><span class="text-lowercase">{{ add.encode(add.name) }}</span></strong></em>
                 <div class="m-t-xs" ng-show="!add.name && add.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A name is required.</span>
                 </div>
-                <br>
-                <div class="panel-heading" style="font-size: 20px;">3. And a description (keep it short if possible)</div>
-                <input type="text" class="form-control input-lg" placeholder="Hardware and software product companies in our region" ng-model="add.headline">
+                <br><br>
+                <div class="panel-heading" style="font-size: 20px;">3. And a short description</div>
+                <input type="text" class="form-control input-lg" placeholder="Local hardware and software product companies" ng-model="add.headline">
                 <br>
                 <div class="panel-heading" style="font-size: 20px;">4. Select the industries that make up this cluster</div>
                 <div class="panel-body industry_select" style="padding:5px; margin-bottom:5px;">
                     <ui-select multiple ng-model="add.industries" style="border:none;" required>
                         <ui-select-match placeholder="Search by industry..">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="industry in add.industryList | filter:$select.search | limitTo: 25">
+                        <ui-select-choices repeat="industry in add.industryList | filter:$select.search | limitTo: 10">
                             {{ industry }}
                         </ui-select-choices>
                     </ui-select>
